--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
   <!-- Add Disqus comments. -->
     <div id="disqus_thread"></div>
     <script type="text/javascript">
-      var disqus_shortname = "disqus_YCjNWfpKEQ"; 
+      var disqus_shortname = "hao-blog"; 
  
       var disqus_identifier = "{{ site.disqusid }}{{ page.url | replace:"index.html","" }}";
       /* * * DON"T EDIT BELOW THIS LINE * * */
