--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,29 +1,16 @@
-{% if page.comments %}
-  <!-- Add Disqus comments. -->
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      var disqus_shortname = "hao-blog"; 
- 
-      var disqus_identifier = "{{ site.disqusid }}{{ page.url | replace:"index.html","" }}";
-      /* * * DON"T EDIT BELOW THIS LINE * * */
-      (function() {
-        var dsq = document.createElement("script"); 
-         dsq.type = "text/javascript"; dsq.async = true;
-         dsq.src = "//" + disqus_shortname + ".disqus.com/embed.js";
- 
-         (document.getElementsByTagName("head")[0] ||
-          document.getElementsByTagName("body")[0])
-                  .appendChild(dsq);
-       })();
-    </script>
-    <noscript>
-      Please enable JavaScript to view the 
-      <a href="http://disqus.com/?ref_noscript">
-         comments powered by Disqus
-      </a>
-    </noscript>
-    <a href="http://disqus.com" class="dsq-brlink">
-         comments powered by 
-         <span class="logo-disqus">Disqus</span>
-    </a>
-{% endif %}
+<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+this.page.url = "https://ezyhdxm.github.io/hao-blog/"; // <--- 修改成你的博客地址
+this.page.identifier = "/hao-blog";
+};
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//hao-blog.disqus.com/embed.js'; // <--- 修改成你的 disqus 站点缩写名
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
