--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div style="clear: both;"/>
 <footer class="site-footer">
-    2020 &copy; Built by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/jekyll/minima/" target="_blank">minima</a> | View <a href="https://github.com/ezyhdxm" target="_blank">this</a> on Github
+    2020 &copy; Built by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/jekyll/minima/" target="_blank">minima</a> | View <a href="https://github.com/ezyhdxm" target="_blank">this</a> on Github | <a href="/hao-blog/tags.html">Tags</a>
 
     <p>
         <a href="{{ site.baseurl }}/feed.xml" target="_blank">
