--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,18 @@
   <body>
 
     {% include header.html %}
-
+    <script>
+      var prevScrollpos = window.pageYOffset;
+      window.onscroll = function() {
+      var currentScrollPos = window.pageYOffset;
+        if (prevScrollpos > currentScrollPos) {
+          document.getElementById("header-bar").style.top = "0";
+        } else {
+          document.getElementById("header-bar").style.top = "-50px";
+        }
+        prevScrollpos = currentScrollPos;
+      }
+      </script>
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
