--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -201,7 +201,8 @@ a {
  */
 blockquote {
   color: $grey-color;
-  border-left: 4px solid $grey-color-light;
+  border-left: 4px solid lighten($grey-color, 22%);
+  background-color: lighten($grey-color, 44%);
   padding-left: $spacing-unit / 2;
   @include relative-font-size(1.125);
   letter-spacing: -1px;
