--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -156,7 +156,17 @@
 }
 
 .page-heading {
-  @include relative-font-size(1.25);
+  @include relative-font-size(1.8);
+  letter-spacing: -1px;
+  line-height: 1.2;
+
+  @include media-query($on-laptop) {
+    @include relative-font-size(2.2);
+  }
+
+  font-weight: $base-font-weight * 1.5;
+  width: $content-width * 0.85;
+  max-width: 100%;
 }
 
 .post-list {
@@ -188,7 +198,17 @@
 
 .post-link {
   display: block;
-  @include relative-font-size(1.5);
+  @include relative-font-size(1.7);
+  letter-spacing: 1px;
+  line-height: 1.2;
+
+  @include media-query($on-laptop) {
+    @include relative-font-size(2.2);
+  }
+
+  font-weight: $base-font-weight * 1.5;
+  width: $content-width * 0.85;
+  max-width: 100%;
 
   &:hover {
     color: $crimson-color-light;
