--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -156,16 +156,16 @@
 }
 
 .page-heading {
-  @include relative-font-size(1.8);
+  @include relative-font-size(1.6);
   letter-spacing: -1px;
   line-height: 1.2;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.2);
+    @include relative-font-size(1.6);
   }
 
   font-weight: $base-font-weight * 1.5;
-  width: $content-width * 0.85;
+  width: $content-width * 0.9;
   max-width: 100%;
 }
 
@@ -198,16 +198,16 @@
 
 .post-link {
   display: block;
-  @include relative-font-size(1.7);
+  @include relative-font-size(1.4);
   letter-spacing: 1px;
-  line-height: 1.2;
+  line-height: 2.4;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.2);
+    @include relative-font-size(1.6);
   }
 
-  font-weight: $base-font-weight * 1.5;
-  width: $content-width * 0.85;
+  font-weight: $base-font-weight * 1.4;
+  width: $content-width;
   max-width: 100%;
 
   &:hover {
