--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
         prevScrollpos = currentScrollPos;
       }
       </script>
+    <div style="background-image:url(https://images2.minutemediacdn.com/image/upload/c_fit,f_auto,fl_lossy,q_auto,w_728/v1555999902/shape/mentalfloss/construction_8.gif?itok=1GFBdKOO); background-repeat:repeat-x;width:1400px;height:150px;border:1px solid black;padding:10px;">
+      </div>
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
