--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -31,7 +31,11 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
+  line-height: 1.75;
+}
 
+body :lang(zh){
+  font-family: 'EB Garamond', "Noto Sans", Georgia, 'source-han-serif-sc', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif TC', 'Source Han Serif TW', 'Source Han Serif', 'Songti SC', 'Microsoft YaHei', serif;
 }
 
 .share-buttons {
@@ -169,7 +173,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
 /**
  * Links
  */
@@ -204,15 +207,19 @@ blockquote {
   border-left: 4px solid lighten($grey-color, 22%);
   background-color: lighten($grey-color, 44%);
   padding-left: $spacing-unit / 2;
-  @include relative-font-size(1.125);
+  @include relative-font-size(1);
   letter-spacing: -1px;
-  font-style: italic;
+  font-style: normal;
 
   > :last-child {
     margin-bottom: 0;
   }
 }
 
+blockquote p:lang(zh){
+  font-family: 'EB Garamond', Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
+  font-weight: 400;
+}
 
 
 /**
