--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,23 @@
     </style>
     
     <!-- For Latex -->
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    
+    <!-- For tables -->
+    <style>
+      table{
+        border-left:1px solid #000000;border-top:1px solid #000000;
+        width: 100%;
+        word-wrap:break-word; word-break:break-all;
+      }
+      table th{
+      text-align:center;
+      }
+      table th,td{
+        border-right:1px solid #000000;border-bottom:1px solid #000000;
+      }
+    </style>
 
     <!-- Google Analytics -->
     <script>
