--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,28 +1,31 @@
 <head>
-    {% if site.tags != "" %}
+    <!--{% if site.tags != "" %}
       {% include tags.html %}
-    {% endif %}
+    {% endif %}-->
+
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+
+    <!-- For Latex -->
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
     <link rel="shortcut icon" href="{{ '/assets/images/radio.ico' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
     <link rel="stylesheet" type="text/css" href="/dist/fonts.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ner8oiv.css">
     <link href="https://fonts.loli.net/css?family=Noto+Serif+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC" rel="stylesheet">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
     
-    <!-- For Latex -->
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
     
     <!-- For tables -->
     <style>
@@ -62,6 +65,7 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
 
+    <!--Using Typekit, the Adobe Fonts-->
     <script>
       (function(d) {
         var config = {
