--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,25 +1,40 @@
 /**
  * Site header
  */
-.site-header {
+
+#navbar {
+  overflow: hidden;
+  background-color: $background-color;
+  border-top: 4px solid $crimson-color;
+  border-bottom: 0.5px solid $crimson-color-very-light;
+  position: relative;
+  top: 0;
+  width: 100%;
+  display: block;
+  transition: top 0.3s;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+
+/*.site-header {
   border-top: 5px solid $crimson-color;
   border-bottom: 1px solid $crimson-color-very-light;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
   position: relative;
-}
+}*/
 
 .site-title {
   @include relative-font-size(1.625);
   font-weight: 600;
   color: $crimson-color;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  line-height: $base-line-height * $base-font-size * 2;
   letter-spacing: -1px;
   margin-bottom: 0;
+  padding-left: 160px;
   float: left;
 
-  &,
+  //&,
   &:visited {
     color: $crimson-color-dark;
   }
@@ -31,6 +46,76 @@
   }
 }
 
+#navbar {
+  line-height: $base-line-height * $base-font-size * 2;
+  padding-right: 100px;
+  float: right;
+  text-align: center;
+
+  .icon {
+    display: none;
+  }
+
+  .page-link {
+    
+    // padding-left: 100px;
+    
+    color: $text-color;
+    line-height: $base-line-height;
+
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 25px;
+    }
+
+    &:hover {
+      color: $crimson-color;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+}
+
+
+  @media screen and (max-width: 600px) {
+    #navbar a:not(:first-child) {display: none;}
+    #navbar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    #navbar.responsive {
+      position: relative; 
+      padding-right: 0px;
+    }
+    #navbar.responsive .icon {
+      position: relative;
+      right: 0%;
+      top: 0%;
+    }
+
+    #navbar.responsive a:not(:first-child) {
+      margin-right: 0px;
+    }
+
+    #navbar.responsive a {
+      float: none;
+      display: block;
+      color: $background-color;
+      background-color: lighten($grey-color, 13%);
+      text-align: center;
+      &.site-title{
+        padding-left: 0px;
+        float: none;
+        letter-spacing: 0px;
+      }
+    }
+  
+  }
+
+  /*
 .site-nav {
   float: right;
   text-align: right;
@@ -115,15 +200,16 @@
   }
 }
 
-
+*/
 
 /**
  * Site footer
  */
 .site-footer {
-  right: 0;
+  padding-top:    75px;
+  // right: 0;
   bottom: 0;
-  left: 0;
+  // left: 0;
   padding: 1rem;
   text-align: center;
   font-size: $small-font-size;
@@ -147,12 +233,24 @@
   }
 }
 
+@media (min-width: 48em) {
+  .site-footer {
+    margin-left: 1.5rem;
+    margin-right: 1rem;
+  }
+}
 
 /**
  * Page content
  */
-.page-content {
+/*.page-content {
   padding: $spacing-unit 0;
+}*/
+
+.right-content {
+  // padding: $spacing-unit 0;
+  padding-top:    75px;
+  padding-bottom: 2rem;
 }
 
 .page-heading {
@@ -284,4 +382,13 @@
       text-decoration: none;
     }
   }
+}
+
+.publication{
+  @include relative-font-size(0.8);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(0.775);
+    }
+    font-weight: $base-font-weight;
 }
