--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,7 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
-$base-font-family: 'EB Garamond', "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: adobe-garamond-pro,'EB Garamond', "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   20px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
