--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,16 +1,28 @@
+<!--div id="disqus_thread"></div>
+<script>
+    var disqus_config = function () {
+        this.page.url = "https://ezyhdxm.github.io/hao-blog/"; // <--- 修改成你的博客地址
+        this.page.identifier = "/hao-blog";
+    };
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = '//hao-blog.disqus.com/embed.js'; // <--- 修改成你的 disqus 站点缩写名
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript-->
+
 <div id="disqus_thread"></div>
 <script>
-var disqus_config = function () {
-this.page.url = "https://ezyhdxm.github.io/hao-blog/"; // <--- 修改成你的博客地址
-this.page.identifier = "/hao-blog";
-};
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-
-s.src = '//hao-blog.disqus.com/embed.js'; // <--- 修改成你的 disqus 站点缩写名
-
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
+    (function() {  // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://hao-blog.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+<noscript>
+    Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+</noscript>
