Add Notes and modify about and contact

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
     <div class="site-navi" id="navbar">
         {% assign default_paths = site.pages | map: "path" %}
         <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        <a class="page-link" href="/hao-blog/notes.html" target="_blank">&#x1F306; Notes</a>
         <a class="page-link" href="/hao-blog/about.html" target="_blank">&#x1f349; About</a> <!--&#x1f349 represents watermelon unicode-->
         <a class="page-link" href="{{ "/contact.html" | relative_url }}">&#x1f4ee; Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>    
