--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script-->
     <script id="MathJax-script" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
+
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
     <link rel="shortcut icon" href="{{ '/assets/images/radio.ico' | relative_url }}">
@@ -23,7 +26,8 @@
     <link rel="stylesheet" type="text/css" href="/hao-blog/dist/fonts.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ner8oiv.css">
     <link href="https://fonts.loli.net/css?family=Noto+Serif+SC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC" rel="stylesheet">
+    <!--link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC" rel="stylesheet"-->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
